# scripting-comparison

./: .gitignore  .gitmodules  CMakeLists.txt  harness.hpp  lua_harness.cpp  main.cpp
script/: lua.lua
